# vgtracker

./: .env.example  .gitignore  LICENSE  LICENSE.MD  README.md  angular.json  bun.lockb  components.d.ts  eslint.config.js  eslint.config.ts  go.mod  go.sum  index.html  magefile.go  main.go  package.json  tailwind.config.js  tsconfig.json  uno.config.ts  vite.config.js  vite.config.ts  wails.json
.github/workflows/: build-dev.yaml  build.yaml  lint.yaml  release.yml  test-and-lint.yml  test.yaml  testing  testing.yml
backend/: app.go  config_controller.go  twitch_controller.go
backend/api/: profile.go
backend/controllers/: config_controller.go  config_controller_test.go  controller_suite_test.go  game_detail_controller.go  igdb_controller.go  steam_controller.go  twitch_controller.go  twitch_controller_test.go
backend/db/: db.go
backend/igdb/: client.go  clientwrapper.go
backend/igdbwrapper/: client.go
backend/models/: enums.go  (+2 more)
frontend/: .eslintrc  .prettierrc  README.md  bun.lockb  components.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  package.json.md5  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.vue  app.html  main.ts  routes.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/config/: Config.ts  ReadConfigOutput.ts  Theme.ts  UpdateConfigInput.ts
src-tauri/bindings/igdb/: GameSummary.ts  SearchGamesInput.ts  SearchGamesOutput.ts
src-tauri/frontend_models/: config.ts
src-tauri/src/: lib.rs  main.rs  twitch.rs
src-tauri/src/cmd/: config.rs  igdb.rs  mod.rs
src-tauri/src/internal/: config.rs  igdb.rs
(+116 files in other folders)
