[package]
name = "vgtracker"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = ["shell-open"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.10"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
ts-rs = "8.0.0"
igdb-api-rust = "0.1.1"
microjson = "=0.1.2" # used for igdb-api-rust


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
